added term frequency counter, reorganized

--- a/search_dict.ipynb
+++ b/search_dict.ipynb
@@ -14,14 +14,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <p style=\"text-align: center;\"> Creating and Refining Dictionaries with Word Embedding Models"
+    "# <p style=\"text-align: center;\"> Dictionary Exploration and Term Search with word2vec"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align: left;\">Charter School Identities Project<br/><br/>Creator: Jaren Haber, PhD Candidate<br/>Institution: Department of Sociology, University of California, Berkeley<br/>Date created: July 20, 2018<br/>Date last modified: September 27, 2019"
+    "<p style=\"text-align: left;\">Charter School Identities Project<br/><br/>Creator: Jaren Haber, PhD Candidate<br/>Institution: Department of Sociology, University of California, Berkeley<br/>Date created: September 27, 2019<br/>Date last modified: September 27, 2019"
    ]
   },
   {
