counting dict frequencies in exploratory and dedicated scripts

--- a/search_dict.ipynb
+++ b/search_dict.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        " 'your']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -606,7 +606,7 @@
        " ('low\\xadincome', 0.5703068375587463)]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -814,7 +814,7 @@
        " 'child-centered_individualized']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -870,7 +870,7 @@
        " ('common-core_aligned', 0.8661572337150574)]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +910,7 @@
        "'hands-on_learning'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1430,7 +1430,7 @@
        " 'yet-to-be-defined_future']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1445,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1613,14 +1613,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 9/367 [00:00<00:05, 71.26it/s]"
+      "\r",
+      "  0%|          | 0/367 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -1634,8 +1637,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 367/367 [00:15<00:00, 24.11it/s]\n",
-      "100%|██████████| 367/367 [00:00<00:00, 167298.07it/s]"
+      "100%|██████████| 367/367 [03:33<00:00,  1.72it/s]\n",
+      "100%|██████████| 367/367 [00:00<00:00, 48950.89it/s]"
      ]
     },
     {
@@ -1646,37 +1649,20 @@
       "Finished. Returning results.\n",
       "TERM COUNTS FOR CANDIDATES DICTIONARY:\n",
       "\n",
-      "                               TERM  FREQUENCY\n",
-      "29                       low­income       4608\n",
-      "14                        high-risk        341\n",
-      "24            intellectually_gifted        202\n",
-      "15                       high-needs        107\n",
-      "25                    low_achieving        105\n",
-      "16                    low-achieving        105\n",
-      "18                  under-resourced         71\n",
-      "9                 under-represented         62\n",
-      "7                    underachieving         60\n",
-      "21                adjudicated_youth         40\n",
-      "8                  justice-involved         15\n",
-      "22               pregnant/parenting         13\n",
-      "4             disenfranchised_youth          6\n",
-      "27                        youth_yaş          4\n",
-      "20        evidence-based_approaches          0\n",
-      "28               aimed_at_achieving          0\n",
-      "26               considered_at-risk          0\n",
-      "2        academically_low-achieving          0\n",
-      "23              at-risk_adolescents          0\n",
-      "17                  better_my_life.          0\n",
-      "19                living_in_poverty          0\n",
-      "5         at-risk_and_disadvantaged          0\n",
-      "1   construction_management/general          0\n",
-      "3       percentages_of_economically          0\n",
-      "13              out-of-school_youth          0\n",
-      "12      example_the_disenfranchised          0\n",
-      "11      african-american_and_latino          0\n",
-      "10          low-income_and_minority          0\n",
-      "6             high-ability_students          0\n",
-      "0   failure_and_academically-gifted          0\n"
+      "                                      TERM  FREQUENCY\n",
+      "19                                learning     336523\n",
+      "214                             activities     114357\n",
+      "122                                 growth      95806\n",
+      "171                           personalized      82667\n",
+      "468                                  learn      80238\n",
+      "..                                     ...        ...\n",
+      "358                          point-of-need          0\n",
+      "158              struggles_and_questioning          0\n",
+      "156  arguments_and_informative/explanatory          0\n",
+      "152             structured_and_predictable          0\n",
+      "0                    exposed_to_a_coherent          0\n",
+      "\n",
+      "[498 rows x 2 columns]\n"
      ]
     },
     {
@@ -1688,8 +1674,82 @@
     }
    ],
    "source": [
-    "countsdfs = count_master(df, dict_path = dict_path, dict_names = [], file_ext = '.txt', \n",
-    "                         local_dicts = [candidates_list], local_names = [\"candidates\"])"
+    "countsdfs_IBL500 = count_master(df, dict_path = dict_path, dict_names = [], file_ext = '.txt', \n",
+    "                         local_dicts = [inquiry_fin], local_names = [\"candidates\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countsdfs_IBL500.to_csv(\"data/inquiry_500_counts.csv\")\n",
+    "print(countsdfs_IBL500[0][450:])\n",
+    "countsdfs_IBL500[0][:50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Find the 30 words closest to test word:\n",
+    "inqseed = ['inquiry-based', 'problem-based', 'discovery-based', 'experiential', 'constructivist']\n",
+    "\n",
+    "#test_word = \"at-risk\"\n",
+    "candidate_sims = model.most_similar(inqseed, topn=500)\n",
+    "candidates_list = [pair[0] for pair in candidate_sims] + inqseed # Convert to list for frequency search below\n",
+    "candidate_sims"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "countsdfs_IBL5 = count_master(df, dict_path = dict_path, dict_names = [], file_ext = '.txt', \n",
+    "                         local_dicts = [candidates_list], local_names = [\"IBL_candidates\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countsdfs_IBL5.to_csv(\"data/inquiry_seed_similar_counts.csv\")\n",
+    "print(countsdfs_IBL5[0][450:])\n",
+    "countsdfs_IBL5[0][:50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "countsdfs_IBL30 = count_master(df, dict_path = dict_path, dict_names = [], file_ext = '.txt', \n",
+    "                         local_dicts = [inq30], local_names = [\"IBL_candidates\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countsdfs_IBL30.to_csv(\"data/inquiry_30_counts.csv\")\n",
+    "print(countsdfs_IBL30[0][450:])\n",
+    "countsdfs_IBL30[0][:50]"
    ]
   },
   {
