--- a/search_dict.ipynb
+++ b/search_dict.ipynb
@@ -95,14 +95,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define file paths\n",
     "home = '/home/jovyan/work/'\n",
     "wem_path = home + 'wem4themes/data/wem_model_300dims.bin' # path to WEM model\n",
-    "charter_path = home + 'misc_data/charters_2015.pkl' # path to charter school data file\n",
+    "charter_text_path = home + 'misc_data/charters_2015.pkl' # path to charter school web text corpus\n",
+    "charter_corr_path = home + 'misc_data/charters_textfiltered_2015.csv' # path to charter school race/class covariates\n",
     "dict_path = home + 'text_analysis/dictionary_methods/dicts/' # path to dictionary files (may not be used here)"
    ]
   },
@@ -128,8 +129,47 @@
    ],
    "source": [
     "# For counting term frequencies, load text corpus:\n",
-    "df = load_filtered_df(charter_path, [\"WEBTEXT\", \"NCESSCH\"])\n",
+    "df = load_filtered_df(charter_text_path, [\"WEBTEXT\", \"NCESSCH\"])\n",
     "df['WEBTEXT']=df['WEBTEXT'].fillna('') # turn nan to empty iterable for future convenience"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['students_ofcolor',\n",
+       " 'poor_students',\n",
+       " 'white_students',\n",
+       " 'black_students',\n",
+       " 'asian_students',\n",
+       " 'hispanic_students',\n",
+       " 'native_students',\n",
+       " 'mixed_students',\n",
+       " 'ncessch',\n",
+       " 'white_district',\n",
+       " 'black_district',\n",
+       " 'asian_district',\n",
+       " 'native_district',\n",
+       " 'mixed_district',\n",
+       " 'hispanic_district']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# For checking correlations of term counts with race/class covariates, load full charter data:\n",
+    "df_corr = load_filtered_df(charter_corr_path, [\n",
+    "    'white_district', 'black_district', 'asian_district', 'native_district', 'mixed_district', 'hispanic_district', \n",
+    "    'white_students', 'black_students', 'asian_students', 'hispanic_students', 'native_students', 'mixed_students',\n",
+    "    'students_ofcolor', 'poor_students', 'ncessch'])\n",
+    "list(df_corr)"
    ]
   },
   {
@@ -1147,6 +1187,290 @@
    "source": [
     "# Seed dictionary and similar terms:\n",
     "model.most_similar(inqseed, topn=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('career-applicable', 0.8442488312721252),\n",
+       " ('synthetic_phonics', 0.8379385471343994),\n",
+       " ('grit_and_zest', 0.8369365334510803),\n",
+       " ('systematic_and_cumulative', 0.8344263434410095),\n",
+       " ('needing_a_slower', 0.8341528177261353),\n",
+       " ('strict/warm', 0.8339699506759644),\n",
+       " ('discussion-based_assessment', 0.8327045440673828),\n",
+       " ('approaches_and_strategies', 0.8300595283508301),\n",
+       " ('hwt', 0.8285154700279236),\n",
+       " ('includes_mini-lessons', 0.8267961144447327),\n",
+       " ('research-backed', 0.8250576257705688),\n",
+       " ('tprs', 0.8237885236740112),\n",
+       " ('way™', 0.8236422538757324),\n",
+       " ('explicitly_and_systematically', 0.8233060240745544),\n",
+       " ('learn-by-doing', 0.8231520652770996),\n",
+       " ('re-engages', 0.822525680065155),\n",
+       " ('ipc_and_imyc', 0.8217571973800659),\n",
+       " ('content-specific_grade-by-grade', 0.8216098546981812),\n",
+       " ('coherent_sequenced', 0.8212858438491821),\n",
+       " ('*since', 0.8203839659690857),\n",
+       " ('retest/reassess', 0.8199358582496643),\n",
+       " ('direct-instruction', 0.8195356130599976),\n",
+       " ('mymath', 0.8194944858551025),\n",
+       " ('concept-driven', 0.8193811774253845),\n",
+       " ('rigor_and_depth', 0.8191386461257935),\n",
+       " ('student-centered_inquiry-based', 0.8188637495040894),\n",
+       " ('movement-based', 0.8187100887298584),\n",
+       " ('foss_modules', 0.8185172080993652),\n",
+       " ('systematic_and_explicit', 0.818452000617981),\n",
+       " ('multi-aged_learning', 0.8184187412261963),\n",
+       " ('intertwining', 0.8173028230667114),\n",
+       " ('tcmpc', 0.8171952962875366),\n",
+       " ('instructional_best-practices', 0.8161884546279907),\n",
+       " ('theoretical_framework', 0.8161771297454834),\n",
+       " ('componentsof', 0.8160592913627625),\n",
+       " ('incorporating_real-world', 0.8153370022773743),\n",
+       " ('concrete_manipulative', 0.8149304389953613),\n",
+       " ('expeditions—', 0.814918577671051),\n",
+       " ('fun_with_phonograms', 0.8145347833633423),\n",
+       " ('4-blocks', 0.8142393231391907),\n",
+       " ('object-oriented', 0.8142203092575073),\n",
+       " ('samsung_chromebook', 0.8142053484916687),\n",
+       " ('outside-the-box_thinking', 0.813849151134491),\n",
+       " ('multi_sensory', 0.8134316205978394),\n",
+       " ('multi-modal_approach', 0.8133341073989868),\n",
+       " ('rigorous_skills-based', 0.8132665157318115),\n",
+       " ('iqwst', 0.8131582736968994),\n",
+       " ('brainwise', 0.812670111656189),\n",
+       " ('math54', 0.8125743865966797),\n",
+       " ('persuasive/propaganda', 0.8122437000274658)]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test seed terms for direct instruction (DI):\n",
+    "# \"direct-instruction\", \"content-driven\"\n",
+    "model.most_similar([\"mastery-learning\"], topn = 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check similarity of researcher-provided terms to given set of vectors:\n",
+    "test_inquiry = ['']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.11326691,  0.14495131, -0.0702121 ,  0.09014611, -0.24564838,\n",
+       "       -0.0210046 ,  0.10556658, -0.03655465, -0.16267298, -0.3243192 ,\n",
+       "        0.05406683,  0.02731831,  0.11144928,  0.3769929 , -0.12472744,\n",
+       "        0.03871121,  0.25525126, -0.06195063,  0.07490576,  0.03811534,\n",
+       "        0.12474923, -0.07497017, -0.19981799,  0.17316552, -0.06444083,\n",
+       "        0.06488287,  0.21428493,  0.25679854, -0.09283983,  0.24073347,\n",
+       "        0.2102551 , -0.04984238, -0.05790752,  0.08978409, -0.16104761,\n",
+       "        0.17646936,  0.11911432, -0.03135935,  0.2079289 ,  0.21118052,\n",
+       "        0.02031107, -0.05989404, -0.25657767, -0.12029259, -0.14855054,\n",
+       "       -0.20701635,  0.08068484,  0.098107  , -0.05462949,  0.32428956,\n",
+       "        0.09918415, -0.01598323,  0.3082837 , -0.47786173, -0.45230874,\n",
+       "        0.11596318, -0.40249357, -0.06504546,  0.11892848,  0.15212882,\n",
+       "        0.17558342,  0.06425807,  0.17808348, -0.21380672, -0.03084328,\n",
+       "        0.13289432,  0.20690784, -0.13728178,  0.24666996,  0.15585427,\n",
+       "       -0.14824274, -0.08132036,  0.04556013,  0.25789326,  0.31400675,\n",
+       "       -0.08450657,  0.3091055 ,  0.28372917,  0.11914442,  0.23239616,\n",
+       "       -0.12356824, -0.08110227,  0.16586162, -0.10800674, -0.10647976,\n",
+       "       -0.05050719, -0.43445402, -0.16658394, -0.65097606, -0.06435093,\n",
+       "        0.31870154, -0.2774067 ,  0.03146191,  0.0241449 , -0.1534591 ,\n",
+       "       -0.4198309 , -0.16655189,  0.08603106,  0.05138962, -0.36449745,\n",
+       "       -0.10437302, -0.03055453, -0.08148513, -0.1219179 ,  0.17847595,\n",
+       "       -0.21896024,  0.09624432, -0.02641029, -0.07828956,  0.27747852,\n",
+       "        0.06393459,  0.17052992, -0.14990309, -0.2117987 ,  0.37814364,\n",
+       "       -0.00002363,  0.00545579, -0.23677221,  0.15183966,  0.03866035,\n",
+       "        0.22314641, -0.09912499, -0.07396957, -0.17259678, -0.16455439,\n",
+       "        0.01973845, -0.22901496,  0.03500903, -0.45652038,  0.13524786,\n",
+       "       -0.1902538 ,  0.00980713, -0.22541785, -0.08128445, -0.0483475 ,\n",
+       "        0.09175131,  0.23478186,  0.1701719 ,  0.01507285, -0.14086914,\n",
+       "       -0.03812644, -0.05302373,  0.1755876 ,  0.06062406,  0.10088481,\n",
+       "       -0.13454375, -0.18454233,  0.17900446, -0.11673759, -0.193982  ,\n",
+       "        0.20634651, -0.07206023, -0.03960684,  0.14404027, -0.00982058,\n",
+       "       -0.3684404 ,  0.32196692, -0.03045331, -0.0342702 ,  0.03712665,\n",
+       "       -0.05350733,  0.04492977, -0.46193066,  0.02759676, -0.00898963,\n",
+       "        0.30702347,  0.24805889,  0.06981545, -0.02813544, -0.18587236,\n",
+       "       -0.02860803, -0.05663674, -0.5022918 , -0.26127145,  0.13098605,\n",
+       "       -0.11823215, -0.18018599, -0.08449128, -0.18571809, -0.28695896,\n",
+       "       -0.24151954,  0.49369365, -0.05392839, -0.0305089 ,  0.15406868,\n",
+       "        0.24256429, -0.02997107,  0.12462534,  0.06431103, -0.08170578,\n",
+       "       -0.06966566,  0.16686517, -0.3408437 , -0.0719879 , -0.20792215,\n",
+       "       -0.04496296,  0.06646418, -0.3360414 , -0.11195678,  0.20044851,\n",
+       "       -0.08087389,  0.10471147, -0.2811846 , -0.00592836, -0.04469248,\n",
+       "        0.17391774,  0.28142127, -0.00975104, -0.2206957 ,  0.08542202,\n",
+       "        0.04871475,  0.09433171, -0.19590753, -0.01695404,  0.07287285,\n",
+       "        0.2568245 , -0.03718753,  0.11388384,  0.01971326, -0.23883577,\n",
+       "       -0.30671948, -0.09483946,  0.07103397, -0.1071279 ,  0.28592172,\n",
+       "        0.13654803, -0.0492055 , -0.0103601 ,  0.16303007,  0.20310013,\n",
+       "        0.051994  ,  0.3233325 , -0.08843998, -0.5344864 ,  0.01543805,\n",
+       "       -0.14511392,  0.061748  , -0.15051153, -0.09613812,  0.17208494,\n",
+       "        0.10231297, -0.40830046, -0.19115068,  0.14782831, -0.11003436,\n",
+       "       -0.11166883, -0.0089326 , -0.34110194, -0.03561207,  0.21583144,\n",
+       "        0.30628854,  0.09865133,  0.03013526, -0.052157  ,  0.23187318,\n",
+       "        0.01606709, -0.22795951, -0.09857653, -0.00374471, -0.10885767,\n",
+       "       -0.22930121, -0.03725303,  0.34955063, -0.09622473, -0.16112536,\n",
+       "        0.02339447, -0.05662489,  0.24642365,  0.28780276,  0.13651201,\n",
+       "        0.02050685,  0.16999365,  0.09588031, -0.32706863,  0.21932662,\n",
+       "       -0.3085781 ,  0.27625492,  0.04107348, -0.1979738 , -0.26829624,\n",
+       "       -0.06684911, -0.11669612, -0.16435751,  0.10820289, -0.05221778,\n",
+       "        0.09202986, -0.24388042, -0.13305126,  0.252436  ,  0.16447872,\n",
+       "        0.1635687 ,  0.23877716, -0.09209047,  0.17426126,  0.06749404,\n",
+       "       -0.1633354 ,  0.25044608, -0.14142385, -0.33249933,  0.20634678],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words = inqseed\n",
+    "vectors = [model.get_vector(word) for word in words]\n",
+    "average_vector = np.mean(vectors, axis=0)\n",
+    "average_vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8363775014877319"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 - distance.cosine(average_vector, model.get_vector(\"integrated_interdisciplinary\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('integrated_interdisciplinary', 0.8495174646377563),\n",
+       " ('technology-infused', 0.8478963375091553),\n",
+       " ('hands-on_and_minds-on', 0.845363974571228),\n",
+       " ('hands-on/minds-on', 0.8449170589447021),\n",
+       " ('project-centered', 0.8422079086303711),\n",
+       " ('discussion-based', 0.8401801586151123),\n",
+       " ('problem-based_learning', 0.8382363319396973),\n",
+       " ('experiential_approach', 0.8377059698104858),\n",
+       " ('hands-on_minds-on', 0.8366389274597168),\n",
+       " ('life-based', 0.8346015214920044)]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.most_similar(inqseed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('problem-based', 0.7188608646392822),\n",
+       " ('inquiry_based', 0.7165826559066772),\n",
+       " ('integrated_interdisciplinary', 0.7108476161956787),\n",
+       " ('literacy-based', 0.7067997455596924),\n",
+       " ('problem-based_learning', 0.705278754234314),\n",
+       " ('experiential_approach', 0.6990994215011597),\n",
+       " ('technology-infused', 0.6932752132415771),\n",
+       " ('student-driven_exploration', 0.6918015480041504),\n",
+       " ('prbl', 0.6899794340133667),\n",
+       " ('showcase_of_self-driven', 0.6882768273353577)]"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.similar_by_word(\"inquiry-based\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.71658266, 0.7108476 ], dtype=float32)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.cosine_similarities(model.get_vector(\"inquiry-based\"), [model.get_vector(\"inquiry_based\"), model.get_vector(\"integrated_interdisciplinary\")])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.85039485, 0.83637756], dtype=float32)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.cosine_similarities(average_vector, [model.get_vector(\"inquiry-based\"), model.get_vector(\"integrated_interdisciplinary\")])"
    ]
   },
   {
@@ -2458,6 +2782,13 @@
     "    if word not in list(model.vocab):\n",
     "        inquiry_fin.remove(word)\n",
     "        print(\"Removed \" + str(word) + \" from core dictionary.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check terms similar to IBL dictionaries"
    ]
   },
   {
