adding at-risk test dicts

--- a/refine_dict.ipynb
+++ b/refine_dict.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        " 'your']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Repeat inductive process of exploration for a list of seed terms like:\n",
+    "inqseed = ['inquiry-based', 'problem-based', 'discovery-based', 'experiential', 'constructivist']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('integrated_interdisciplinary', 0.8495174646377563),\n",
+       " ('technology-infused', 0.8478963375091553),\n",
+       " ('hands-on_and_minds-on', 0.845363974571228),\n",
+       " ('hands-on/minds-on', 0.8449170589447021),\n",
+       " ('project-centered', 0.8422079086303711),\n",
+       " ('discussion-based', 0.8401801586151123),\n",
+       " ('problem-based_learning', 0.8382363319396973),\n",
+       " ('experiential_approach', 0.8377059698104858),\n",
+       " ('hands-on_minds-on', 0.8366389274597168),\n",
+       " ('life-based', 0.8346015214920044),\n",
+       " ('science-driven', 0.8336309194564819),\n",
+       " ('language-rich', 0.8326779007911682),\n",
+       " ('simulations_role-playing', 0.8310806155204773),\n",
+       " ('cognitively_demanding', 0.8298742771148682),\n",
+       " ('literacy-based', 0.8274999856948853),\n",
+       " ('developmentally-based', 0.8263034820556641),\n",
+       " ('sensory-rich', 0.8242142796516418),\n",
+       " ('inquiry-driven', 0.8225501775741577),\n",
+       " ('student-driven_exploration', 0.8221181035041809),\n",
+       " ('hand-on', 0.8210930824279785)]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.most_similar(inqseed, topn = 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -606,7 +655,7 @@
        " ('low\\xadincome', 0.5703068375587463)]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,12 +670,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('zero-tolerance_policy', 0.6990004181861877),\n",
+       " ('zero-tolerance', 0.6568768620491028),\n",
+       " ('feels_s/he', 0.6339747905731201),\n",
+       " ('hate-motivated', 0.6278372406959534),\n",
+       " ('gang_policy-the', 0.6266128420829773),\n",
+       " ('molestation_prevention', 0.6207634210586548),\n",
+       " ('bulling', 0.6071662306785583),\n",
+       " ('sexual/racial/religion', 0.6040709614753723),\n",
+       " ('cyberbullying_harassment', 0.5921908617019653),\n",
+       " ('offensive_or_provocative', 0.5916315317153931)]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.most_similar(\"zero_tolerance\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Repeat inductive process of exploration for a list of seed terms like:\n",
-    "inqseed = ['inquiry-based', 'problem-based', 'discovery-based', 'experiential', 'constructivist']"
+    "riskseed = [\"high-need\", \"low-income\", \"high-poverty\", \"at-risk\", \"high-risk\"]\n",
+    "risk20 = [\"high-need\", \"high-needs\", \n",
+    "            \"low-income\", \"lower-income\", \"high-poverty\", \"impoverished\", \"economically_challenged\", \n",
+    "            \"underserved\", \"under-served\", \"disproportionately\", \n",
+    "            \"at-risk\", \"high-risk\", \"under-resourced\", \"under-represented\", \"under-performing\", \n",
+    "            \"inner-city\", \"inner_cities\", \n",
+    "            \"marginalized\", \"disconnected\", \"disenfranchised\"] #\"justice\", \"afflicting\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('impoverished_areas', 0.8521490693092346),\n",
+       " ('inner-city_neighborhoods', 0.8487109541893005),\n",
+       " ('high-need_communities', 0.8366204500198364),\n",
+       " ('predominantly_low-income', 0.8357141017913818),\n",
+       " ('communities—and', 0.834736704826355),\n",
+       " ('disconnected_youth', 0.8341152667999268),\n",
+       " ('concentrations_of_low-income', 0.8339563608169556),\n",
+       " ('historically_marginalized', 0.8304299116134644),\n",
+       " ('upper-income', 0.8298649191856384),\n",
+       " ('under-served_populations', 0.8291403651237488),\n",
+       " ('youth-serving_agencies', 0.8260529041290283),\n",
+       " ('tuition-based_private', 0.8223265409469604),\n",
+       " ('african-american_and_latino', 0.8217678666114807),\n",
+       " ('military-connected', 0.8214602470397949),\n",
+       " ('justice-involved', 0.8207274675369263),\n",
+       " ('traditionally_under-served', 0.8206344842910767),\n",
+       " ('afflicting', 0.819398045539856),\n",
+       " ('disenfranchised_youth', 0.8192448616027832),\n",
+       " ('socio-economically_diverse', 0.8176484107971191),\n",
+       " ('non-montessori', 0.815646767616272)]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.most_similar(atrisk20, topn = 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'at-risk'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.doesnt_match(atrisk20)"
    ]
   },
   {
@@ -645,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -754,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -814,7 +958,7 @@
        " 'child-centered_individualized']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 81,
    "metadata": {
     "scrolled": true
    },
@@ -838,55 +982,115 @@
     {
      "data": {
       "text/plain": [
-       "[('life-based', 0.9011286497116089),\n",
-       " ('discussion-based', 0.8966033458709717),\n",
-       " ('andinnovative', 0.8952078819274902),\n",
-       " ('language-rich', 0.89271479845047),\n",
-       " ('science-driven', 0.8912979960441589),\n",
-       " ('integrated_interdisciplinary', 0.8899644613265991),\n",
-       " ('technology-infused', 0.8862203359603882),\n",
-       " ('whole-brain', 0.8859595060348511),\n",
-       " ('cognitively_demanding', 0.884796142578125),\n",
-       " ('sensory-rich', 0.8831244707107544),\n",
-       " ('rigorous_skills-based', 0.8811208009719849),\n",
-       " ('seminar-based', 0.8805467486381531),\n",
-       " ('design-based', 0.8767224550247192),\n",
-       " ('goal-driven', 0.8765220642089844),\n",
-       " ('multi-modality', 0.8756349682807922),\n",
-       " ('simulations_role-playing', 0.874825119972229),\n",
-       " ('life-enhancing_skills', 0.8745526075363159),\n",
-       " ('concrete_manipulative', 0.8743171095848083),\n",
-       " ('content-specific_grade-by-grade', 0.8741116523742676),\n",
-       " ('movement-based', 0.8723524808883667),\n",
-       " ('iqwst', 0.8722272515296936),\n",
-       " ('outside-the-box', 0.8719028830528259),\n",
-       " ('literature-rich', 0.8696819543838501),\n",
-       " ('experiential_project-based', 0.8696408867835999),\n",
-       " ('inventive_thinking', 0.869335412979126),\n",
-       " ('discovery-based_learning', 0.8690539002418518),\n",
-       " ('developmentally-based', 0.8680057525634766),\n",
-       " ('cross-curricular_approach', 0.8672816753387451),\n",
-       " ('hands‑on', 0.8672585487365723),\n",
-       " ('common-core_aligned', 0.8661572337150574)]"
+       "[('hands-on_and_minds-on', 0.9018297791481018),\n",
+       " ('life-based', 0.9010838270187378),\n",
+       " ('hands-on/minds-on', 0.9002548456192017),\n",
+       " ('andinnovative', 0.8981450796127319),\n",
+       " ('exploration_and_experimentation', 0.8939183950424194),\n",
+       " ('student-driven_exploration', 0.8928034901618958),\n",
+       " ('learn-by-doing', 0.8908575773239136),\n",
+       " ('discussion-based', 0.8885971307754517),\n",
+       " ('sensory-rich', 0.8885146379470825),\n",
+       " ('cognitively_demanding', 0.8880689740180969),\n",
+       " ('goal-driven', 0.8855610489845276),\n",
+       " ('language-rich', 0.8845360279083252),\n",
+       " ('inventive_thinking', 0.8842048645019531),\n",
+       " ('outside-the-box', 0.8841923475265503),\n",
+       " ('whole-brain', 0.8832708597183228),\n",
+       " ('student-centered_inquiry-based', 0.881722092628479),\n",
+       " ('learningand', 0.8800451159477234),\n",
+       " ('design-based', 0.8789985775947571),\n",
+       " ('multi-modality', 0.8782442808151245),\n",
+       " ('skills.the', 0.8773536682128906),\n",
+       " ('simulations_role-playing', 0.8769923448562622),\n",
+       " ('discovery-based_learning', 0.8767126202583313),\n",
+       " ('science-driven', 0.8751583099365234),\n",
+       " ('experiential_project-based', 0.8747752904891968),\n",
+       " ('experiential_approach', 0.8739587068557739),\n",
+       " ('life-enhancing_skills', 0.8732867240905762),\n",
+       " ('technology-infused', 0.872771143913269),\n",
+       " ('content-specific_grade-by-grade', 0.8720481395721436),\n",
+       " ('proven_methodology', 0.8718282580375671),\n",
+       " ('laboratory-based', 0.8714048266410828),\n",
+       " ('interdisciplinary_explorations', 0.8705121278762817),\n",
+       " ('concrete_manipulative', 0.8703160881996155),\n",
+       " ('hands‑on', 0.8698033094406128),\n",
+       " ('fieldwork_and_experts', 0.8696654438972473),\n",
+       " ('rigorous_skills-based', 0.8695992231369019),\n",
+       " ('movement-based', 0.8681570887565613),\n",
+       " ('socratic_dialogue', 0.8678734302520752),\n",
+       " ('creativity_and_self-expression', 0.8677195906639099),\n",
+       " ('discovery_exploration', 0.8669207692146301),\n",
+       " ('interdisciplinary_units', 0.8669061660766602),\n",
+       " ('seminar-based', 0.8668314218521118),\n",
+       " ('cross-curricular_approach', 0.8658427000045776),\n",
+       " ('low-stress', 0.8657352924346924),\n",
+       " (\"'real-world\", 0.865092396736145),\n",
+       " ('inquiry_arcs', 0.8650518655776978),\n",
+       " ('hand-on', 0.8644976019859314),\n",
+       " ('internships_and_apprenticeships', 0.8643833994865417),\n",
+       " ('integrated_interdisciplinary', 0.8640334606170654),\n",
+       " ('recursive', 0.8631466627120972),\n",
+       " ('observation_and_experimentation', 0.8629493117332458),\n",
+       " ('literature-rich', 0.8626733422279358),\n",
+       " ('technology-rich_environment', 0.8625494837760925),\n",
+       " ('provides_a_myriad', 0.8620988726615906),\n",
+       " ('constructive_processes', 0.8618738651275635),\n",
+       " ('hands-on-learning', 0.8616212606430054),\n",
+       " ('developmentally-based', 0.8615903854370117),\n",
+       " ('iqwst', 0.8611990213394165),\n",
+       " ('sustained_inquiry', 0.8611524105072021),\n",
+       " ('fostering_curiosity', 0.861002504825592),\n",
+       " ('explorative', 0.8604859709739685),\n",
+       " ('values-centered', 0.8604822158813477),\n",
+       " ('problem-based_learning', 0.8603783845901489),\n",
+       " ('ignite_curiosity', 0.8595255613327026),\n",
+       " ('real-world_problem-solving', 0.8585513830184937),\n",
+       " ('teacher-student_interactions', 0.8580690622329712),\n",
+       " ('nuturing', 0.8580436706542969),\n",
+       " ('creatinga', 0.8579034209251404),\n",
+       " ('activities/lessons', 0.8575699925422668),\n",
+       " ('common-core_aligned', 0.8573706150054932),\n",
+       " ('creativity_and_problem-solving', 0.8569561243057251),\n",
+       " ('activity-oriented', 0.8567660450935364),\n",
+       " ('inwhich', 0.8565043210983276),\n",
+       " ('issues-based', 0.8562240600585938),\n",
+       " ('technology-enriched', 0.8555665612220764),\n",
+       " ('arts-integrated_approach', 0.8554614782333374),\n",
+       " ('nature_journaling', 0.8553277850151062),\n",
+       " ('literacyinstruction', 0.8552738428115845),\n",
+       " ('standards-driven', 0.8550643920898438),\n",
+       " ('hands-on_minds-on', 0.8549244999885559),\n",
+       " ('kāʻeo', 0.8548761606216431),\n",
+       " ('constructivist-based', 0.8546594381332397),\n",
+       " ('engagestudents', 0.8546407222747803),\n",
+       " ('dovetail', 0.8543462753295898),\n",
+       " ('authentic_and_meaningful', 0.8543365001678467),\n",
+       " ('out-the-door', 0.8538415431976318),\n",
+       " ('hands‐on', 0.8536522388458252),\n",
+       " ('in-depth_interdisciplinary', 0.8534858226776123),\n",
+       " ('engaging_and_stimulating', 0.8533276319503784),\n",
+       " ('observation_questioning', 0.8533061742782593),\n",
+       " ('team-focused', 0.8532308340072632),\n",
+       " ('highly_motivating', 0.8528057336807251),\n",
+       " ('toinvestigate', 0.8522485494613647),\n",
+       " ('classes/assignments', 0.8510247468948364),\n",
+       " ('research-backed', 0.8506882786750793),\n",
+       " ('multi-modal', 0.850562334060669),\n",
+       " ('andinterests', 0.8505014181137085),\n",
+       " ('creative_and_imaginative', 0.8504000902175903),\n",
+       " ('physically_and_intellectually', 0.8503432869911194),\n",
+       " ('constructivist_pedagogy', 0.8501715660095215),\n",
+       " ('reflective_thinking', 0.8497847318649292)]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# By searching through the above candidate terms/phrases, expand from the seed terms into a conceptually tight list like this: \n",
-    "inq30 = ['discovery-based', 'student-driven_exploration', 'exploration_and_experimentation', 'laboratory-based', \n",
-    "         'problem-based', 'prbl', 'learn-by-doing', \n",
-    "         'project-based', 'project-centered', \n",
-    "         'experiential', 'experiential_approach', 'experientially',\n",
-    "         'inquiry-based', 'inquiry-driven', 'student-centered_inquiry-based', 'active_inquiry', \n",
-    "         'constructivist', 'constructivism', \n",
-    "         'hands-on', 'hand-on', 'hands-on_learning', 'hands-on_and_minds-on', 'hands-on_minds-on', 'hands-on/minds-on', \n",
-    "         'socratic', 'socratic_method', 'socratic_dialogue',\n",
-    "         'child-centered', 'learner-centered', 'student-centered']\n",
-    "\n",
     "inq50 = ['inquiry-based', 'problem-based', 'discovery-based', 'experiential', 'constructivist', 'hands-on', \n",
     "         'experiential_learning', 'creative', 'problem-solving', 'critical_thinking', 'real_world', 'creativity', \n",
     "         'project-based', 'exploration', 'curiosity', 'investigate', 'real-life', 'student-centered', 'critical_thinkers', \n",
@@ -897,41 +1101,33 @@
     "         'inquiry-driven', 'child-directed', 'child-initiated', 'experientially', 'problem-centered', 'project-centered']\n",
     "\n",
     "# Could add more terms, too:\n",
-    "model.most_similar(inq30, topn=30)"
+    "model.most_similar(inq50, topn=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/gensim/models/keyedvectors.py:877: FutureWarning: arrays to stack must be passed as a \"sequence\" type such as list or tuple. Support for non-sequence iterables such as generators is deprecated as of NumPy 1.16 and will raise an error in the future.\n",
-      "  vectors = vstack(self.word_vec(word, use_norm=True) for word in used_words).astype(REAL)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'hands-on_learning'"
+       "'investigate'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Can also search for terms that don't match:\n",
-    "model.doesnt_match(inq30)"
+    "model.doesnt_match(inq50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1635,7 @@
        " 'yet-to-be-defined_future']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1454,15 +1650,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Removed stuck_with_them_affecting from core dictionary.\n",
-      "Removed styles_and_modalities from core dictionary.\n"
+      "Removed styles_and_modalities from core dictionary.\n",
+      "Removed stuck_with_them_affecting from core dictionary.\n"
      ]
     }
    ],
